# backtest-grid-scale

./: .gitignore  LICENSE  README.md  config.yaml  performance.csv  pyproject.toml
.github/workflows/: main.yml
.github/workflows/benchmarks/: test_correctness.py
backtest_grid_scale/: __init__.py  config.py  data.py  indicators.py  njit_version.py  pandas_version.py
benchmarks/: config.py  data.py  indicators.py  njit_version.py  pandas_version.py  run_benchmark.py  test_benchmark.py  test_correctness.py
benchmarks/backtest_grid_scale.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
benchmarks/test_data/: TFEX_S501!_1h.csv
results/: SuperDaily_S501!_1h.csv  dir.txt  pandas_SuperDaily_S501!_1h.csv
