[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta" 

[project]
name = "backtest-grid-scale"
version = "0.1.0"
description = "Backtesting parameter grid search built to run at scale"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "numba",
    "psutil",
    "TA-Lib",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backtest_grid_scale*"]

[tool.pytest.ini_options]
testpaths = ["benchmarks"]